# CelerGraph

./: .env.example  .gitignore  CONFIGURATION.md  README.md  chat_history.json  detailed.html  detailed.md  envins.txt  pyproject.toml  requirements.txt  run_all.bat  samplequestions.txt  start-dev.bat
api/: controllers.py  main.py  models.py  routes.py
config/: logger.py  myapikeys.py  settings.py
core/: chroma_setup.py  chunker.py  code_exceptions.py  container.py  embed_nodes.py  embeddings.py  factories.py  graphrag.py  graphrag_solid.py  interfaces.py  loadneo.py  ratelimit.py  retrieval.py  semantic_cache.py  services.py
evaluation/: eval_results.csv  golden_dataset.json  run_evals.py  run_latency_check.py  run_retrieval_evals.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/scripts/: smoke-chat.js
frontend/src/: GraphRAGChat.jsx  index.css  main.jsx
graph_indexing/: knowledge_graph.json  sample.cypher
graph_indexing/kgbuild/: graph.py  python_extractor.py  runner.py  treesitter_extractor.py
observability/: start_phoenix.py
observability/logging/: __init__.py  json_logger.py
observability/rag/: __init__.py  rag_events.py  rag_metrics.py
observability/tracing/: __init__.py  fastapi_middleware.py  instrumentation.py  tracer.py
samples/: writeup.txt
scripts/: test_api.py
t_for_testing/: README_tests.txt  temp_question.json  test_frontend.html
w_reports/: detailed.html  latency_report.txt  retrieval_report.txt  retrieval_results.txt  samplequestions.txt  verify_treesitter.py
(+5 files in other folders)
