[project]
name = "inco"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "asttokens>=3.0.1",
    "langchain[all]>=0.3.27",
    "libcst>=1.8.6",
    "matplotlib>=3.9.4",
    "neo4j>=5.28.2",
    "networkx>=3.2.1",
    "numpy>=2.0.2",
    "pandas>=2.3.3",
    "qdrant-client>=1.16.0",
    "seaborn>=0.13.2",
]
